--- a/src/scss/_typo.scss
+++ b/src/scss/_typo.scss
@@ -20,17 +20,24 @@ h3 {
 }
 
 h1 {
-
-    font-size: 4.2rem;
     line-height: 1;
     font-style: italic;
+    font-size: 3.6rem;
+
+    @include desktop {
+        font-size: 4.2rem;
+    }
 }
 
 p {
     cursor: default;
 
     &:not(:last-of-type) {
-        margin-bottom: 1.75em;
+        margin-bottom: 1.5em;
+        
+        @include desktop {
+            margin-bottom: 1.75em;
+        }
     }
 }
 
