Adjust mobile bio

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,5 +5,6 @@
 @import "components/typo";
 @import "components/layout";
 @import "components/loading";
+@import "components/bio";
 @import "components/animations";
 @import "components/scroll";
