--- a/src/scss/components/_layout.scss
+++ b/src/scss/components/_layout.scss
@@ -1,10 +1,11 @@
 html, body {
+    width: 100%;
+    overflow-x: hidden;
     background: $background-color;
     color: $text-color;
 }
 
 body {
-    overflow-x: hidden;
     padding-top: 2rem;
 
     @include large {
@@ -16,20 +17,6 @@ body {
     padding: 0 1rem;
     max-width: 60rem;
     margin: 0 auto;
-}
-
-.bio {
-    position: relative;
-
-    img {
-        @include large {
-            width: 20rem;
-            position: absolute;
-            left: -6rem;
-            top: -3rem;
-            pointer-events: none;
-        }
-    }
 }
 
 .footer {
