--- a/src/scss/components/_typo.scss
+++ b/src/scss/components/_typo.scss
@@ -31,7 +31,11 @@ h1 {
 
 h2 {
     font-weight: 500;
-    font-size: 2.5rem;
+    font-size: 2rem;
+
+    @include large {
+        font-size: 2.5rem;
+    }
 }
 
 p {
