--- a/src/scss/components/_typo.scss
+++ b/src/scss/components/_typo.scss
@@ -38,6 +38,13 @@ h2 {
     }
 }
 
+h3 {
+    font-weight: 700;
+    font-size: 1.75rem;
+    margin-bottom: 1rem;
+    letter-spacing: 2px;
+}
+
 p {
     margin: 0 0 1.25em;
     cursor: default;
@@ -53,6 +60,17 @@ strong,
 .strong {
     font-weight: 500;
     font-style: italic;
+}
+
+em,
+.em {
+    font-style: italic;
+    font-size: 0.85em;
+    line-height: 1.5em;   
+}
+
+u {
+    text-decoration: underline;
 }
 
 .intro {
