Update colors, text, minor UI

--- a/src/scss/components/_animations.scss
+++ b/src/scss/components/_animations.scss
@@ -4,6 +4,6 @@
     
     span {
         display: inline-block;
-        transform: translateY(100px);
+        transform: translate3d(0, 100px, 0);
     }
 }
