--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,9 +3,9 @@
 :root {
   --spacer: 3em;
   --half-spacer: 1.5rem;
-  --background: #e1dfdc;
-  --foreground: #171717;
-  --accent: #274bd9;
+  --background: #f4f4f4;
+  --foreground: #0e0e0e;
+  --accent: #0c40fd;
   --foreground--highlight: var(--accent);
   scroll-behavior: smooth;
 }
@@ -21,8 +21,8 @@
 body {
   background-color: var(--background);
   color: var(--foreground);
-  font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "IBM Plex Mono", Menlo, Consolas, Monaco, Liberation Mono,
+    Lucida Console, monospace;
   line-height: 1.6;
   font-weight: 400;
   font-size: 1.05em;
