Update blurb warning

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ import Bio from "../content/bio.md";
         <h2>a frontend developer with 7+ years experience</h2>
 
         <h3>
-          Specialized in building fast, reliable, and user-centered web
+          Specialized in building fast, reliable, and human-centered web
           interfaces, I value simplicity and inclusivity.
         </h3>
       </header>
