--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,6 +61,13 @@ import Bio from "../content/bio.md";
             >GitHub</a
           >.
         </p>
+
+        <p>
+          <small
+            >I’m committed to transparency and compliance with European Union's
+            legislation regarding privacy; this website does not collect or set
+            any cookie.</small>
+        </p>
       </footer>
     </main>
   </body>
