--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,11 +6,6 @@ import Bio from "../content/bio.md";
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script>
-      window.addEventListener("load", function () {
-        document.body.style.opacity = 1;
-      });
-    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -23,12 +18,12 @@ import Bio from "../content/bio.md";
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;600&display=swap"
       rel="stylesheet"
     />
   </head>
 
-  <body style="opacity:0">
+  <body>
     <main>
       <header>
         <h1>Hi, I'm <a href="/">Riccardo Zaffalon</a>,</h1>
@@ -66,7 +61,8 @@ import Bio from "../content/bio.md";
           <small
             >I’m committed to transparency and compliance with European Union's
             legislation regarding privacy; this website does not collect or set
-            any cookie.</small>
+            any cookie.</small
+          >
         </p>
       </footer>
     </main>
