--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,127 +1,148 @@
-@import "reset";
+@import 'reset';
 
 $breakpoint: 768px;
 
 @mixin large {
-  @media (min-width: $breakpoint) {
-    @content;
-  }
+	@media (min-width: $breakpoint) {
+		@content;
+	}
 }
 
 :root {
-  --color-background: #f6f1ea;
-  --color-foreground: rgb(41, 39, 37);
-  --color-foreground-dimmed: rgb(150, 139, 131);
-  --color-accent: rgb(19, 106, 167);
+	--color-background: #ffffff;
+	--color-foreground: rgb(12, 12, 12);
+	--color-foreground-dimmed: rgb(122, 122, 122);
+	--color-accent: rgb(255, 34, 0);
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --color-background: #272625;
-    --color-foreground: rgb(233, 229, 225);
-    --color-foreground-dimmed: rgb(148, 148, 148);
-    --color-accent: rgb(230, 194, 50);
-  }
+	:root {
+		--color-background: #272625;
+		--color-foreground: rgb(233, 229, 225);
+		--color-foreground-dimmed: rgb(148, 148, 148);
+		--color-accent: rgb(230, 194, 50);
+	}
 }
 
 ::selection {
-  background-color: var(--color-accent);
-  color: var(--color-background);
+	background-color: var(--color-accent);
+	color: var(--color-background);
 }
 
 body {
-  background-color: var(--color-background);
-  color: var(--color-foreground);
-  font-size: 16px;
-  line-height: 1.8;
-  font-family: "Manrope", sans-serif;
-  font-weight: 300;
-  cursor: default;
+	background-color: var(--color-background);
+	color: var(--color-foreground);
+	font-size: 16px;
+	line-height: 1.8;
+	font-family: 'Manrope', sans-serif;
+	font-weight: 400;
+	cursor: default;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 
-  @include large {
-    font-size: 18px;
-  }
+	@include large {
+		font-size: 20px;
+	}
 }
 
 a {
-  color: var(--color-accent);
-  font-weight: 600;
+	color: var(--color-accent);
+	font-weight: 700;
 }
 
 h1 {
-  font-size: 1.6rem;
+	font-size: 1.6rem;
 
-  @include large {
-    font-size: 2rem;
-  }
+	@include large {
+		font-size: 2rem;
+	}
 }
 
 h2 {
-  font-size: 1.35rem;
+	font-size: 1.35rem;
 
-  @include large {
-    font-size: 1.5rem;
-  }
+	@include large {
+		font-size: 1.5rem;
+	}
 }
 
 h3 {
-  font-size: 1.15rem;
+	font-size: 1.15rem;
 
-  @include large {
-    font-size: 1.25rem;
-  }
+	@include large {
+		font-size: 1.25rem;
+	}
 }
 
 h2,
 h3,
 h4 {
-  margin-bottom: 1em;
+	margin-bottom: 1em;
 }
 
 strong {
-  font-weight: 600;
+	font-weight: 700;
+}
+
+em {
+	font-size: 0.888888em;
 }
 
 input,
 button {
-  font-family: inherit;
+	font-family: inherit;
 }
 
 header {
-  a {
-    text-decoration: none;
-    color: inherit;
-  }
+	a {
+		text-decoration: none;
+		color: inherit;
+	}
+}
+
+.lang {
+	display: flex;
+	margin: -2em 0 2em;
+	justify-content: flex-end;
+	align-items: center;
+	font-size: 0.875rem;
+	color: inherit;
+
+	svg {
+		display: block;
+		width: 1rem;
+		margin-right: 0.5em;
+	}
 }
 
 main {
-  max-width: 40em;
-  margin: 0 auto;
-  padding: 4em 1em;
+	max-width: 40em;
+	margin: 0 auto;
+	padding: 4em 1em;
 
-  @include large {
-    padding: 4em;
-  }
+	@include large {
+		padding: 4em;
+	}
 }
 
 .copy {
-  margin: 4em 0;
+	margin: 4em 0;
 
-  p {
-    margin-bottom: 2em;
-  }
+	p {
+		margin-bottom: 2em;
+	}
 }
 
 footer {
-  p {
-    small {
-      display: block;
-      font-size: 0.75em;
-      line-height: 1.3;
-      margin-top: 8em;
-      padding: 0 2em;
-      text-align: center;
-      color: var(--color-foreground-dimmed);
-    }
-  }
+	p {
+		small {
+			display: block;
+			font-size: 0.75em;
+			line-height: 1.3;
+			margin-top: 8em;
+			padding: 0 2em;
+			text-align: center;
+			color: var(--color-foreground-dimmed);
+		}
+	}
 }
