--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,32 +1,37 @@
 @import 'reset';
 
-$breakpoint: 768px;
+$breakpoint-md: 768px;
+$breakpoint-lg: 1024px;
+
+@mixin medium {
+	@media (min-width: $breakpoint-md) {
+		@content;
+	}
+}
 
 @mixin large {
-	@media (min-width: $breakpoint) {
+	@media (min-width: $breakpoint-lg) {
 		@content;
 	}
 }
 
 :root {
-	--color-background: #ffffff;
+	--color-background: rgb(245, 244, 239);
 	--color-foreground: rgb(12, 12, 12);
 	--color-foreground-dimmed: rgb(122, 122, 122);
-	--color-accent: rgb(22, 46, 227);
+	--color-accent: rgb(0, 0, 0);
 
-	font-size: 125%;
+	--body-font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
 
-	@include large {
-		// font-size: 150%;
-	}
+	// font-size: 125%;
+	font-size: 87.5%;
 }
 
 @media (prefers-color-scheme: dark) {
 	:root {
-		--color-background: #272625;
-		--color-foreground: rgb(233, 229, 225);
-		--color-foreground-dimmed: rgb(148, 148, 148);
-		--color-accent: rgb(230, 194, 50);
+		--color-background: #383838;
+		--color-foreground: rgb(209, 209, 209);
+		--color-accent: rgb(255, 255, 255);
 	}
 }
 
@@ -39,8 +44,7 @@ body {
 	background-color: var(--color-background);
 	color: var(--color-foreground);
 	line-height: 1.8;
-	font-family: 'Atkinson Hyperlegible', 'Inter', 'Helvetica', sans-serif;
-	font-optical-sizing: auto;
+	font-family: var(--body-font-family);
 	font-style: normal;
 	font-weight: 400;
 	-webkit-font-smoothing: antialiased;
@@ -55,13 +59,13 @@ a {
 
 h1 {
 	font-size: 1.6rem;
-	line-height: 1;
 
-	@include large {
+	@include medium {
 		font-size: 2rem;
 	}
 }
 
+h1,
 h2,
 h3,
 h4 {
@@ -69,17 +73,18 @@ h4 {
 }
 
 h2 {
-	font-size: 1.35rem;
+	font-size: 1.15rem;
 
-	@include large {
-		font-size: 1.5rem;
+	@include medium {
+		font-size: 1.25rem;
 	}
 }
 
 h3 {
-	font-size: 1.15rem;
+	font-size: 1.25rem;
+	font-weight: 700;
 
-	@include large {
+	@include medium {
 		font-size: 1.25rem;
 	}
 }
@@ -105,7 +110,7 @@ hr {
 	user-select: none;
 	margin: 2em;
 
-	@include large {
+	@include medium {
 		margin: 3em;
 	}
 }
@@ -128,12 +133,15 @@ header {
 }
 
 main {
-	max-width: 40em;
-	margin: 0 auto;
-	padding: 4em 1em;
+	max-width: 80ch;
+	padding: 4em 1.5em;
+
+	@include medium {
+		padding: 8em 6em;
+	}
 
 	@include large {
-		padding: 8em 4em;
+		margin-left: 5%;
 	}
 }
 
@@ -151,7 +159,7 @@ main {
 	margin-bottom: 1em;
 	grid-template-columns: repeat(2, 1fr);
 
-	@include large {
+	@include medium {
 		grid-template-columns: repeat(4, 1fr);
 		margin-bottom: 2em;
 	}
@@ -166,7 +174,7 @@ main {
 		aspect-ratio: 2 / 3;
 		object-fit: cover;
 		border-radius: 0 0.5rem 0.5rem 0;
-		margin-bottom: 0.5rem;
+		margin-bottom: 0.75rem;
 	}
 
 	&__title,
@@ -189,15 +197,13 @@ main {
 footer {
 	p {
 		&:last-child {
-			margin-top: 8em;
+			margin-top: 4em;
 		}
 
 		small {
 			display: block;
 			font-size: 0.75em;
 			line-height: 1.3;
-			padding: 0 2em;
-			text-align: center;
 			color: var(--color-foreground-dimmed);
 		}
 	}
