--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -58,10 +58,15 @@ a {
 }
 
 h1 {
-	font-size: 1.6rem;
+	font-size: 2rem;
+
+	a {
+		font-weight: normal;
+		letter-spacing: -3px;
+	}
 
 	@include medium {
-		font-size: 2rem;
+		font-size: 2.5rem;
 	}
 }
 
@@ -167,6 +172,8 @@ main {
 
 .book {
 	margin-bottom: 1em;
+	display: flex;
+	flex-direction: column;
 
 	&__cover {
 		display: block;
@@ -180,17 +187,20 @@ main {
 	&__title,
 	&__subtitle,
 	&__author {
-		line-height: 1.1;
+		line-height: 1.35;
 	}
 
 	&__subtitle {
 		font-size: 0.75rem;
 		color: var(--color-foreground-dimmed);
+		margin-bottom: 1em;
 	}
 
 	&__author {
 		font-size: 0.85rem;
-		margin-top: 1em;
+		margin-top: auto;
+		height: 2.5em;
+		font-style: italic;
 	}
 }
 
